<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <!-- No Hard-Coded Strings or values. Define everything in the "values" folder corresponding file-->
    <!-- Default Layout should be suited for a resolution of 1080x2220 -->
    <!-- IDs: -->
    <!--        Naming Convention: elementtype_usage_with_short_desc -->
    <!-- Constants(Strings): -->
    <!--        Naming Convention: TYPE_USAGESHORTDESC-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_add_to_db"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@+id/todo_list"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="openAddWindowActivity"
        android:background="@drawable/roundedbutton75dp"
        android:backgroundTint="@color/violet"
        android:contentDescription="@string/STRING_ADDTASK"
        android:elevation="10dp"
        android:src="@drawable/baseline_add_24" />

    <include
        android:id="@+id/tToolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/burgermenu_toolbar" />
</RelativeLayout>