...
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/edittext_name"
        android:src="@drawable/roundedbutton20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#00C11C" />

    <TextView
...
        android:maxLines="5"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_title"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
...
