...
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
    style="@style/ChangingTextColor"
    android:id="@+id/item_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top|start"
    android:layout_weight="1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
...
    android:textSize="15dp"
    tools:text="@string/STRING_PLACEHOLDER" />


    <TextView
        style="@style/ChangingTextColor"
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|start"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="5"
...
